trying to fix body scrolling on mobile

--- a/public/css/client.css
+++ b/public/css/client.css
@@ -8,6 +8,7 @@
      display: flex;
      flex-direction: column;
      overflow: hidden;
+     position: static;
  }
 
  #map {
